--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,14 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/Prefab/Forest.prefab
 Assets/Prefab/Forest.prefab.meta
+Assets/JP Environmental Asset Pack/Materials/Terrain Materials/New Terrain.asset
+Assets/JP Environmental Asset Pack/Materials/Terrain Materials/New Terrain.asset
+Assets/New Terrain.asset
+Assets/New Terrain.asset.meta
+Assets/Scenes/Game map/Game map.unity
+Assets/JP Environmental Asset Pack/Materials/Terrain Materials/New Terrain.asset
+Assets/JP Environmental Asset Pack/Materials/Terrain Materials/New Terrain.asset
+Assets/Scenes/Game map/Game map.unity
+*.unity
+Assets/Scenes/Game map/Game map.unity
+Assets/JP Environmental Asset Pack/Materials/Terrain Materials/New Terrain.asset
